@@ -5,6 +5,7 @@ Version 0.9.0alpha6 - 2007-03-XX
    * Automatically parse track numbers from file names like 01.flac for better
      cluster->album matching with untagged files.
    * Support for the new sorting tags in MP4 tags from iTunes 7.1.
+   * Strip white-space from directory names. (#2558)
  * Bug Fixes:
    * Artist names from ARs should be translated, too.
    * Freeze after answering no to "download the new version" prompt. (#2542)
